<resources>

    <string name="app_name">ClientInputControler</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Input Control Client</string>
    <string name="send_to_server">Send</string>
    <string name="server_address">Server IP:</string>
    <string name="server_port">Server Port:</string>
    <string name="hint_for_ip">Please input server IP</string>
    <string name="msg_label">Please input command: </string>
    <string name="hint_for_port">Please input server port</string>
    <string name="hint_for_msg">Please input command</string>
    <string name="default_ip">192.168.1.101</string>
    <string name="default_port">8888</string>
    <string name="click">S-Click</string>
    <string name="up">Up</string>
    <string name="double_click">D-Click</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="right_click">R-Click</string>
    <string name="toast_invalid_ip">Server information is invalid, using previous valid settings!</string>
    <string name="label_default_step">3</string>
    <string name="default_step_value">3</string>
    <string name="max_step_value">50</string>
    <string name="label_accuracy">Accuracy£º</string>
    
    <!-- for keyboard -->
    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

</resources>