<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#22220000">

    <!-- IP -->
    
    <TextView
        android:id="@+id/ip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/server_address"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ip"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/ip_label"
        android:hint="@string/hint_for_ip"
        android:text="@string/default_ip"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:visibility="gone"/>

    <!-- Port -->

    <TextView
        android:id="@+id/port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ip_label"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/server_port"
        android:textAppearance="?android:attr/textAppearanceSmall"  
        android:visibility="gone"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ip"
        android:layout_below="@id/ip_label"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/port_label"
        android:hint="@string/hint_for_port"
        android:inputType="number"
        android:text="@string/default_port"
        android:textAppearance="?android:attr/textAppearanceSmall"  
        android:visibility="gone"/>

    <!-- Message -->

    <TextView
        android:id="@+id/msg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ip"
        android:layout_marginTop="0dp"
        android:singleLine="true"
        android:layout_toRightOf="@id/msg_label"
        android:hint="@string/hint_for_msg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- step -->

    <SeekBar
        android:id="@+id/sb_step"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/msg_label"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:max="@string/max_step_value"
        android:progress="@string/default_step_value"  
        android:visibility="gone"/>

    <TextView
        android:id="@+id/label_step"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/msg_label"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/sb_step"
        android:gravity="center_horizontal"
        android:text="@string/label_default_step"  
        android:visibility="gone"/>

    <!-- send button -->

    <Button
        android:id="@+id/bt_send"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/msg_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/send_to_server" />

    <!-- move buttons -->
    <!-- line 1 -->

    <Button
        android:id="@+id/bt_click"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_send"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="0dp"
        android:text="@string/click" />

    <Button
        android:id="@+id/bt_right_click"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_send"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/bt_click"
        android:text="@string/right_click" />

    <Button
        android:id="@+id/bt_double_click"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_send"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/bt_right_click"
        android:text="@string/double_click" />

    <!-- line 2 -->

    <Button
        android:id="@+id/bt_up"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_click"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/up" />

    <!-- line 3 -->

    <Button
        android:id="@+id/bt_left"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_up"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:text="@string/left" />

    <Button
        android:id="@+id/bt_right"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bt_up"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/bt_left"
        android:text="@string/right" />

    <!-- line 4 -->

    <Button
        android:id="@+id/bt_down"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@id/bt_left"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/down" />

    <include layout="@layout/input" />

</RelativeLayout>